<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.overview.OverviewFragment">

    <ImageView
        android:id="@+id/image_view_food"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        />

    <View
        android:id="@+id/gradient_overlay"
        android:background="@drawable/gradient_overlay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/image_view_food"
        app:layout_constraintEnd_toEndOf="@id/image_view_food"
        app:layout_constraintBottom_toBottomOf="@id/image_view_food"
        app:layout_constraintTop_toTopOf="@id/image_view_food"
        app:layout_constraintVertical_bias="1"
        />

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_view_food"
        app:layout_constraintEnd_toEndOf="@id/image_view_food" />
    <ImageView
        android:id="@+id/time_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="@id/time_tv"
        app:layout_constraintEnd_toEndOf="@id/time_tv"
        app:layout_constraintBottom_toTopOf="@id/time_tv"
        app:tint="@color/white"
        />


    <TextView
        android:id="@+id/likes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/time_tv"
        app:layout_constraintEnd_toStartOf="@id/time_tv" />
    <ImageView
        android:id="@+id/likes_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintStart_toStartOf="@id/likes_tv"
        app:layout_constraintEnd_toEndOf="@id/likes_tv"
        app:layout_constraintBottom_toTopOf="@id/likes_tv"
        app:tint="@color/white"
        />

    
    <TextView
        android:id="@+id/title_tv"
        android:text="Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_food"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:fontFamily="@font/courgette"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/vegetarian_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:layout_marginTop="12dp"
        app:tint="@color/itemColor"
        />
     <TextView
          android:id="@+id/vegetarian_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toEndOf="@id/vegetarian_image_view"
          app:layout_constraintTop_toTopOf="@id/vegetarian_image_view"
          app:layout_constraintBottom_toBottomOf="@id/vegetarian_image_view"
          android:text="@string/vegetarian"
          android:layout_marginStart="8dp"
         android:textColor="@color/itemColor"
          />
    <ImageView
        android:id="@+id/vegan_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/vegetarian_image_view"
        app:layout_constraintTop_toBottomOf="@id/vegetarian_image_view"
        android:layout_marginTop="12dp"
        app:tint="@color/itemColor"
        />
    <TextView
        android:id="@+id/vegan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vegan_image_view"
        app:layout_constraintTop_toTopOf="@id/vegan_image_view"
        app:layout_constraintBottom_toBottomOf="@id/vegan_image_view"
        android:text="@string/vegan"
        android:layout_marginStart="8dp"
        android:textColor="@color/itemColor"
        />

    <ImageView
        android:id="@+id/dairy_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@id/vegetarian_tv"
        app:layout_constraintTop_toTopOf="@id/vegetarian_image_view"
        app:layout_constraintBottom_toBottomOf="@id/vegetarian_image_view"
        app:tint="@color/itemColor"
        android:layout_marginStart="24dp"
        />
    <TextView
        android:id="@+id/dairy_free_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dairy_free_image_view"
        app:layout_constraintTop_toTopOf="@id/dairy_free_image_view"
        app:layout_constraintBottom_toBottomOf="@id/dairy_free_image_view"
        android:text="@string/dairy_free"
        android:layout_marginStart="8dp"
        android:textColor="@color/itemColor"
        />
    <ImageView
        android:id="@+id/gluten_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/dairy_free_image_view"
        app:layout_constraintEnd_toEndOf="@id/dairy_free_image_view"
        app:layout_constraintTop_toTopOf="@id/vegan_image_view"
        app:layout_constraintBottom_toBottomOf="@id/vegan_image_view"
        app:tint="@color/itemColor"
        />
    <TextView
        android:id="@+id/gluten_free_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/gluten_free_image_view"
        app:layout_constraintTop_toTopOf="@id/gluten_free_image_view"
        app:layout_constraintBottom_toBottomOf="@id/gluten_free_image_view"
        android:text="@string/gluten_free"
        android:layout_marginStart="8dp"
        android:textColor="@color/itemColor"
        />

    <ImageView
        android:id="@+id/healthy_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@id/dairy_free_tv"
        app:layout_constraintTop_toTopOf="@id/dairy_free_image_view"
        app:layout_constraintBottom_toBottomOf="@id/dairy_free_image_view"
        app:tint="@color/itemColor"
        android:layout_marginStart="24dp"
        />
    <TextView
        android:id="@+id/healty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/healthy_image_view"
        app:layout_constraintTop_toTopOf="@id/healthy_image_view"
        app:layout_constraintBottom_toBottomOf="@id/healthy_image_view"
        android:text="@string/healthy"
        android:layout_marginStart="8dp"
        android:textColor="@color/itemColor"
        />
    <ImageView
        android:id="@+id/cheap_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/healthy_image_view"
        app:layout_constraintEnd_toEndOf="@id/healthy_image_view"
        app:layout_constraintTop_toTopOf="@id/gluten_free_image_view"
        app:layout_constraintBottom_toBottomOf="@id/gluten_free_image_view"
        app:tint="@color/itemColor"
        />
    <TextView
        android:id="@+id/cheap_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cheap_image_view"
        app:layout_constraintTop_toTopOf="@id/cheap_image_view"
        app:layout_constraintBottom_toBottomOf="@id/cheap_image_view"
        android:text="@string/cheap"
        android:layout_marginStart="8dp"
        android:textColor="@color/itemColor"
        />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/vegan_image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/summary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ex dui, volutpat vel nulla ac, vehicula egestas magna. Donec eget velit at velit porta suscipit. Curabitur efficitur convallis vestibulum. Quisque elementum nisl id semper suscipit. Cras maximus, magna eu suscipit venenatis, turpis mi imperdiet urna, sed varius erat nisi nec nunc. Donec pulvinar odio quis tincidunt volutpat. Phasellus a purus massa.

Donec varius, enim ac pharetra auctor, enim dolor feugiat erat, a malesuada odio est vitae est. Donec eget scelerisque augue. Morbi fermentum dictum ligula, eu tincidunt nisl. Mauris tempor dolor vitae fermentum ultrices. Mauris nisi enim, efficitur at condimentum sed, mattis nec felis. Donec accumsan, arcu non scelerisque tristique, leo enim semper mi, nec pellentesque ante diam at libero. Duis magna enim, varius eu venenatis a, malesuada suscipit tortor. Vestibulum ante tellus, gravida eget luctus vel, vulputate a odio. Sed viverra et orci vitae ultrices. "
                android:textSize="16sp"
                />

        </LinearLayout>
    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>